desarrolloweb_jose_rosario

--- a/index.html
+++ b/index.html
@@ -1,10 +1,63 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>ejemplo</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no">
+	<title>Proyecto Final</title>
 </head>
 <body>
-	<h1>ejemplo de source tree</h1>
+	
+	<img src="Capture.png" alt="proyecto final" title="proyecto final" width="200px" height="200px">
+	<ol>
+		<li><a href="html/educacion.html">Educacion</a></li>
+		<li><a href="html/experiencia.html">Experiencia</a></li>
+	</ol>
+	<form name="Hoja de Vida">  
+		<fieldset>
+			<h1>Hoja de Vida</h1>
+			<ol>
+				<li>
+					<h2>Nomnres</h2>
+					<ul>
+						<li>
+							<h3>Jose Antonio</h3>
+						</li>
+					</ul>
+				</li>
+				<li>
+					<h2>Apellidos</h2>
+					<ul>
+						<li>
+							<h3>Rosario Lazala</h3>
+						</li>
+					</ul>
+				</li>
+				<li>
+					<h2>Fecha y Lugar de Nacimiento</h2>
+					<ul>
+						<li>
+							<h3>14-01-1993, Fantino, Sanchez Ramirez, Republica Dominicana</h3>
+						</li>
+					</ul>
+				</li>
+			</ol>
+			<img src="fotos.jpg" alt="proyecto final" title="proyecto final" width="200px" height="200px">
+			<h2>Perfil</h2></br>
+			<p>  <strong><em>Soy un joven emprendedor</em></strong>, con mucho deseo de superacion y aficionado a la programacion, tanto web como de escritop para todo tipo de dispositivos. Soy conciente de que mundo glabalizado en el cual estamos viviendo hoy en dia, tiene muchas demandas, las cuales son retos para mi los cuales anhelo verlo ganar.
+				
+			</p>
+
+		</fieldset>
+	 </form>
+	 <footer>
+	 	<p> Email: </br>
+	 	 jochy20140322@gmail.com
+	 	</p>
+	 	<p> Contacto: </br>
+	 	 809-767-2071
+	 	</p>
+	 	
+     </footer>
 
 </body>
 </html>
